Cycles GPU + Light tree: Sun sampling does not work under certain conditions #110255

Closed
opened 2023-07-19 07:57:04 +02:00 by Alaska · 1 comment
Member

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79

System Information
Operating system: macOS-13.4.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: Intel(R) Arc(TM) A750 Graphics Intel 4.6.0 - Build 31.0.101.4502

Blender Version
Broken version: 4.0.0 Alpha, branch: main, commit date: 2023-07-19 01:26, hash: c3bf00cd2d3a
Broken version: 3.6
Broken version: 3.5
Worked: Prior to the addition of the light tree

Short description of error
When using a GPU backend for Cycles, sun lights with small angles (E.G. Between 0 degrees and 0.01 degrees), at certain rotations, with light trees enabled, won't be sampled.

I can reproduce this issue on a Nvidia GPU with CUDA and OptiX, an Apple GPU with Metal, and a Intel GPU with oneAPI. CPU is fine, and I don't have a AMD GPU to test HIP.

Warning, video contains flickering:

Exact steps for others to reproduce the error

  1. Open the attached .blend file. Missing sun sampling.blend
  2. Render it with a GPU backend, the sun won't be sampled.
  3. Do one of the things listed below and the sun will be sampled.
    • Rotate the sun light to an angle that will be sampled
    • Disable the Light Tree
    • Switch to CPU rendering
    • Increase the Angle of the sun light
    • Enable OSL (OptiX only) - This is an odd one, why does enabling OSL fix the issue?
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79 **System Information** Operating system: macOS-13.4.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 **System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: Intel(R) Arc(TM) A750 Graphics Intel 4.6.0 - Build 31.0.101.4502 **Blender Version** Broken version: 4.0.0 Alpha, branch: main, commit date: 2023-07-19 01:26, hash: `c3bf00cd2d3a` Broken version: 3.6 Broken version: 3.5 Worked: Prior to the addition of the light tree **Short description of error** When using a GPU backend for Cycles, sun lights with small angles (E.G. Between `0` degrees and `0.01` degrees), at certain rotations, with light trees enabled, won't be sampled. I can reproduce this issue on a Nvidia GPU with CUDA and OptiX, an Apple GPU with Metal, and a Intel GPU with oneAPI. CPU is fine, and I don't have a AMD GPU to test HIP. ### Warning, video contains flickering: <video src="/attachments/4da92bff-cd1e-40bb-8834-69bb3793b00f" title="Missing sun sampling.mp4" controls></video> **Exact steps for others to reproduce the error** 1. Open the attached .blend file. [Missing sun sampling.blend](/attachments/2c62bbc1-d8fa-486e-b166-59a7d8b66d80) 2. Render it with a GPU backend, the sun won't be sampled. 3. Do one of the things listed below and the sun will be sampled. - Rotate the sun light to an angle that will be sampled - Disable the Light Tree - Switch to CPU rendering - Increase the `Angle` of the sun light - Enable OSL (OptiX only) - This is an odd one, why does enabling OSL fix the issue?
Member

I can confirm

**System Information**
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 532.03
I can confirm ``` **System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 532.03 ```
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
Interest
Render & Cycles
labels 2023-07-19 08:30:38 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-07 07:29:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110255
No description provided.